--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ nusb = "0.1.14"
 #nusb = "0.2.0-beta"
 futures-lite = "1.13.0"
 env_logger = "0.10.0"
+hex-literal = "1.0.0"
 
 #[[bin]]
 #name = "main"
