--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ nusb = "0.1.14"
 futures-lite = "1.13.0"
 env_logger = "0.10.0"
 hex-literal = "1.0.0"
+strum = "0.27.1"
+strum_macros = "0.27.1"
 
 #[[bin]]
 #name = "main"
