--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ hex-literal = "1.0.0"
 strum = "0.27.1"
 strum_macros = "0.27.1"
 hex = "0.4"
+clap = { version = "4.5.40", features = ["derive"] }
 
 #[[bin]]
 #name = "main"
