--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ strum = "0.27.1"
 strum_macros = "0.27.1"
 hex = "0.4"
 clap = { version = "4.5.40", features = ["derive"] }
+chrono = "0.4.41"
 
 #[[bin]]
 #name = "main"
