--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ strum_macros = "0.27.1"
 hex = "0.4"
 clap = { version = "4.5.40", features = ["derive"] }
 chrono = "0.4.41"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 #[[bin]]
 #name = "main"
