--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ clap = { version = "4.5.40", features = ["derive"] }
 chrono = "0.4.41"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+base64 = "0.22.1"
 
 #[[bin]]
 #name = "main"
