--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2024"
 nusb = "0.1.14"
 #nusb = "0.2.0-beta"
 futures-lite = "1.13.0"
-env_logger = "0.10.0"
+env_logger = "0.11.8"
+log = "0.4.28"
 hex-literal = "1.0.0"
 strum = "0.27.1"
 strum_macros = "0.27.1"
