--- a/.gitea/workflows/rust.yaml
+++ b/.gitea/workflows/rust.yaml
@@ -2,45 +2,49 @@ on: [push, pull_request]
 
 name: Continuous integration
 
+env:
+  CARGO_TERM_COLOR: always
+
 jobs:
-  check:
-    name: Check
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions-rust-lang/setup-rust-toolchain@v1
-      - run: cargo check
-
-  test:
-    name: Test Suite
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions-rust-lang/setup-rust-toolchain@v1
-      - run: cargo test
-
-  fmt:
-    name: Rustfmt
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions-rust-lang/setup-rust-toolchain@v1
-      - run: rustup component add rustfmt
-      - run: cargo fmt --all -- --check
-
-  clippy:
-    name: Clippy
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions-rust-lang/setup-rust-toolchain@v1
-      - run: rustup component add clippy
-      - run: cargo clippy -- -D warnings
-
   build:
-    name: build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions-rust-lang/setup-rust-toolchain@v1
-      - run: cargo build
+    - uses: actions/checkout@v4
+    - uses: actions/cache@v4
+      with:
+        path: |
+          ~/.cargo/bin/
+          ~/.cargo/registry/index/
+          ~/.cargo/registry/cache/
+          ~/.cargo/git/db/
+          target/
+        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+    - uses: actions-rust-lang/setup-rust-toolchain@v1
+      with:
+        components: cargo-fmt, clippy, outdated, udeps, audit, pants
+
+    - run: cargo build --release
+
+    - run: cargo test
+
+    - run: cargo check
+
+    - run: cargo fmt --all -- --check
+
+    - run: cargo clippy -- -D warnings
+
+    - uses: EmbarkStudios/cargo-deny-action@v2
+
+    - run: cargo outdated --exit-code 1
+
+    - run: cargo udeps
+
+    #- run: rm -rf ~/.cargo/advisory-db
+    - run: cargo audit
+
+    - run: cargo pants
+
+    - uses: actions/upload-artifact@v4
+      with:
+        name: igotu-gt120
+        path: target/release/igotu-gt120
